--- a/hongs-magpie-web/web/centre/data/magpie/assistant/defines.css
+++ b/hongs-magpie-web/web/centre/data/magpie/assistant/defines.css
@@ -1,15 +1,18 @@
 
-#context ,
 #bodybox {
     padding: 0;
 }
 
-#bodybox>.container {
-    margin-top: 0;
+#bodybox > .container {
     height: 100vh;
+    margin-top: 0;
 }
 
-.magpie-msgsbox .rollbox > .msgs-list > div > .alert {
+.centre-data-magpie-assistant-talk {
+    margin-top: 20px;
+}
+
+.centre-data-magpie-assistant-talk .magpie-msgsbox .rollbox > .msgs-list > div > .alert {
     border-color: #ccc;
     white-space : pre-wrap;
 }
