--- a/hongs-magpie-web/web/centra/data/magpie/assistant/defines.css
+++ b/hongs-magpie-web/web/centra/data/magpie/assistant/defines.css
@@ -1,7 +1,5 @@
 
-.centra-data-magpie-assistant-test .magpie-msgsbox .rollbox {
-}
-.centra-data-magpie-assistant-test .magpie-msgsbox .rollbox > .msgs-list > div > .alert {
+.centra-data-magpie-assistant-test .magpie-msgsbox .msgs-list .alert {
     border-color: #ccc;
     white-space : pre-wrap;
 }
